log
Wed 24 Apr 2024 11:45:12 PM UTC: 
 tests:  0|6
total_score: 0/70
99fd2f5
Wed 24 Apr 2024 11:55:43 PM UTC: 
 hashmap.c | 28 ++++++++++++++++++++++++----
 1 file changed, 24 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:60:8: error: unused variable ‘size’ [-Werror=unused-variable]
   60 |   long size = map->size;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
7ab2f4f
Thu 25 Apr 2024 12:00:30 AM UTC: 
 hashmap.c | 25 ++++++++++++++++---------
 1 file changed, 16 insertions(+), 9 deletions(-)
 tests:  5|4
total_score: 30/70
3b48315
Thu 25 Apr 2024 12:01:49 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
3398929
